// Version
syntax = "proto3";

// Package name
option go_package = "tansan/modules/auth/authPb";

// Structure
message AccessTokenSearchReq {
  string accessToken = 1;
}

message AccessTokenSearchRes {
  bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {    
  int64 count = 1;
}

// Methods
service AuthGrpcService {
    rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}
