// Version
syntax = "proto3";

// Package name
option go_package = "tansan/modules/auth/authPb";

// Structure
message UserProfile {
    string id = 1;
    string email = 2;
    string username = 3;
    int32 roleCode = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CredentialSearchReq {
    string email = 1;
    string password = 2;
}

message FindOneUserProfileToRefreshReq {
    string playerId = 1;
}

message GetUserSavingAccountReq {
    string playerId = 1;
}

message GetUserSavingAccountRes {
    string playerId = 1;
    double balance = 2;
}


// Methods
service UserGrpcService {
    rpc CredentialSearch(CredentialSearchReq) returns (UserProfile);
    rpc FindOneUserProfileToRefresh(FindOneUserProfileToRefreshReq) returns (UserProfile);
    rpc GetUserSavingAccount(GetUserSavingAccountReq) returns (GetUserSavingAccountRes);
}
