// Version
syntax = "proto3";

// Package name
option go_package = "tansan/modules/userbooks/userbooksPb";

// Structure
message IsAvailableToSellReq {
    string userId = 1;
    string bookId = 2;
}

message IsAvailableToSellRes {
    bool isAvailabel = 1;
}

// Methods
service UserbooksGrpcService {
    rpc IsAvailabelToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes){}
}